fix: 🐞 fixed the collapse between intro error message to header
fixed the collapse between intro email validation error to typecall
section's header

--- a/src/components/containers/Main/TypicalMarketplaces/TypicalMarketplaces.module.scss
+++ b/src/components/containers/Main/TypicalMarketplaces/TypicalMarketplaces.module.scss
@@ -44,6 +44,10 @@
 }
 
 @media (max-width: 850px) {
+	.typicalMarketplacesSectionContainer {
+		margin-top: 40px;
+	}
+
 	.typicalMarketplacesSection {
 		&__header {
 			margin-bottom: 15px;
